Verif/Test/Invalide/test_erreur_3.59-7.deca
// Description:
//    Programme soulevant l'erreur (3.59)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Conversion de 'int' en 'boolean' impossible (règle 3.59)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean b;
{
   b = cast<boolean> (1);
}